# RareEventEstimation

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cbree-diffusion.sh  cbree-toy-problems.sh  cbree_diffusion.sh  cbree_diffusion_10_12.sh  cbree_diffusion_1_3.sh  cbree_diffusion_4_6.sh  cbree_diffusion_7_9.sh  cbree_fr_small.sh  cbree_fr_small_12.sh  cbree_fr_small_18.sh  cbree_fr_small_36.sh  cbree_fr_small_4.sh  cbree_fr_small_54.sh  cbree_fr_small_8.sh  cbree_linear_small.sh  cbree_linear_small_10.sh  cbree_linear_small_14.sh  cbree_linear_small_18.sh  cbree_linear_small_36.sh  cbree_linear_small_4.sh  cbree_linear_small_54.sh  diffusion_benchmark.sh  docker_commands.md  genindex.html  indactor-perf.sh  index.html  link_to_readme.html  objects.inv  problem.html  pyproject.toml  requirements.txt  run_container.sh  search.html  searchindex.js  (+4 more)
_sources/: index.rst  solver.rst
_static/: documentation_options.js
docs/: Makefile  conf.py  example.ipynb  make.bat
shell-scripts/: cbree_run_flowrate.sh  cbree_run_oscillator.sh  cbree_vmfnm_run_flowrate.sh  cmc_run_flowrate.sh  enkf_run_flowrate.sh  enkf_run_oscillator.sh  sis_run_flowrate.sh  sis_run_linear_problems.sh  sis_run_oscillator.sh
test/: diffusion_problem_test.py  test_LogNormalField.py  test_cbree.py  test_cbree_solve_from_caches.py  test_cmc.py  test_diffusion_pde.py  test_do_multiple_solves.py  test_enkf.py  test_flow_rate_problem.py  test_nonlinear_oscillator_prob.py  test_sis.py  test_study_cbree_observation_window.py
tests/: test_RareEventEstimation.py
(+157 files in other folders)
