[tool.poetry]
name = "rareeventestimation"
version = "0.1.0"
description = "Estimate rare events with consensus based sampling and other methods."
authors = ["Konstantin Althaus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
